--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Justin Ellery
-  site_tagline: Another internet person.
+  site_tagline: A highly motivated & inquisitive individual.
   favicon_image: /images/favicon.png
 
 header_settings:
